adjust hero section padding in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</nav>
 
 		<!-- Hero -->
-		<div id="home" class="min-h-screen hero bg-neutral-100">
+		<div id="home" class="min-h-screen pt-10 hero bg-neutral-100">
 			<div
 				class="flex-col gap-8 px-4 py-8 mx-auto md:py-12 hero-content lg:flex-row-reverse max-w-7xl"
 			>
