--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<!-- Navbar -->
-		<nav class="fixed z-50 w-full shadow-lg md:px-4 bg-base-100">
+		<nav class="fixed z-50 w-full bg-white shadow-lg md:px-4">
 			<div class="max-w-screen-xl mx-auto navbar">
 				<div class="navbar-start">
 					<div class="dropdown">
@@ -75,7 +75,7 @@
 		</nav>
 
 		<!-- Hero -->
-		<div id="home" class="min-h-screen pt-10 hero bg-neutral-100">
+		<div id="home" class="min-h-screen pt-10 hero bg-neutral-50">
 			<div
 				class="flex-col gap-8 px-4 py-8 mx-auto md:py-12 hero-content lg:flex-row-reverse max-w-7xl"
 			>
@@ -403,7 +403,7 @@
 		</section>
 
 		<!-- Reviews/Testimonials -->
-		<section class="px-4 py-16 bg-neutral-100">
+		<section class="px-4 py-16 bg-neutral-50">
 			<div class="mx-auto max-w-7xl">
 				<!-- Section Header -->
 				<div class="mb-12 text-center">
@@ -1023,7 +1023,7 @@
 		</section>
 
 		<!-- Dashboards -->
-		<section class="px-4 py-16 bg-base-100">
+		<section class="px-4 py-16 bg-white">
 			<div class="mx-auto max-w-7xl">
 				<!-- Section Header -->
 				<div class="mb-16 text-center">
@@ -1163,7 +1163,7 @@
 		</section>
 
 		<!-- Company Logos -->
-		<section class="px-4 py-16">
+		<section class="px-4 py-16 bg-white">
 			<div class="mx-auto max-w-7xl">
 				<!-- Section Header -->
 				<div class="mb-12 text-center">
@@ -1884,7 +1884,7 @@
 		</section>
 
 		<!-- Bonus Content -->
-		<section id="offer" class="px-4 py-24 bg-gray-50">
+		<section id="offer" class="px-4 py-24 bg-neutral-50">
 			<div class="mx-auto max-w-7xl">
 				<!-- Section Header -->
 				<div class="mb-16 text-center">
